refactor(tmux): make transparent statusbar

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -214,43 +214,102 @@ set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
 
 ### STATUS BAR ###
+#     │
 set -g status-interval 60
-set -g status-style "bg=green fg=black"
+set -g status-style "bg=default"
 
 set -g status-left ""
 set -g status-left-length 0
 
 set -g window-status-separator ''
-set -g window-status-format "\
-#[bg=brightgreen] #{window_index}:#{window_name} \
-#{?#{==:#{window_index},#{last_window_index}},\
+set -g window-status-format "#[bg=default fg=default none]#[push-default]"
+set -ag window-status-format "\
+#[pop-default]\
+#{?window_start_flag,\
+	#[bg=brightgreen fg=yellow]\
+,\
+	\
+}\
+#[none]\
+#[bg=brightgreen fg=black] #{window_index}:#{window_name} \
+#[none]\
+#{?window_end_flag,\
+	#[bg=default fg=brightgreen bold]#[none]\
+	#[bg=default fg=brightgreen bold]#[none]\
+,\
+	\
+}\
+"
+
+set -g window-status-current-format "#[bg=default fg=default none]#[push-default]"
+set -ag window-status-current-format "\
+#[pop-default]\
+#{?window_start_flag,\
+	#[bg=brightgreen fg=yellow]\
 	#[bg=green fg=brightgreen]\
 ,\
-}"
-
-set -g window-status-current-format "\
-#[bg=brightgreen fg=yellow]\
-#[bg=green fg=brightgreen]\
-#[bg=green fg=black] #{window_index}: #{window_name} \
-#{?#{==:#{window_index},#{last_window_index}},\
-	│\
+	#[bg=green fg=brightgreen]\
+}\
+#[none]\
+#[bg=green fg=black bold] #{window_index}: #{window_name}  #[none]\
+#[none]\
+#{?window_end_flag,\
+	#[bg=default fg=green bold]#[none]\
+	#[bg=default fg=green bold]#[none]\
 ,\
 	#[bg=brightgreen fg=green]\
-}"
+}\
+"
 
-set -g status-right "\
+set -g status-right "#[bg=default fg=default none]#[push-default]"
+set -ag status-right "\
+#[pop-default]\
+#[bg=default fg=brightgreen bold]#[none]\
+#{?#{==:#{client_key_table},prefix},\
+	#[bg=default fg=white italics] PREFIX #[none]\
+,\
+	\
+}\
+#{?#{==:#{client_key_table},resize},\
+	#[bg=default fg=white italics] RESIZE #[none]\
+,\
+	\
+}\
+#{?window_zoomed_flag,\
+	#[bg=default fg=brightgreen bold]#[none]\
+	#[bg=brightgreen fg=black bright italics] ZOOMED #[none]\
+	#{?client_prefix,\
+		\
+	,\
+		#[bg=brightgreen fg=yellow bold]#[none]\
+	}\
+,\
+	\
+}\
+#{?client_prefix,\
+	#{?window_zoomed_flag,\
+		#[bg=brightgreen fg=yellow bold]#[none]\
+	,\
+		#[bg=default fg=yellow bold]#[none]\
+	}\
+,\
+	#{?window_zoomed_flag,\
+		\
+	,\
+		#[bg=default fg=yellow bold]#[none]\
+	}\
+}\
+#[bg=yellow fg=black bold]   #{session_name} #[none]\
 #[fg=brightgreen]\
-#[bg=brightgreen fg=yellow]\
-#[bg=brightgreen fg=black]#{?#{==:#{client_key_table},prefix}, PREFIX ,}\
-#[bg=brightgreen fg=black]#{?#{==:#{client_key_table},resize}, RESIZE ,}\
+#[bg=brightgreen fg=black bold] %d-%b-%Y #[none]\
 #[fg=green]\
-#[bg=green fg=black]#{?window_zoomed_flag, ZOOMED ,}\
-#[bg=green fg=yellow]\
-#[bg=yellow fg=black]   #{session_name} \
-#[fg=brightgreen]\
-#[bg=brightgreen fg=black] %d-%b-%Y #[fg=green]\
-#[bg=green fg=black] %I:%M %p \
+#[bg=green fg=black bold] %I:%M %p #[none]\
 #[fg=brightgreen]\
 #[bg=brightgreen fg=yellow]\
 "
 set -g status-right-length 500
+
+
+#[bg=brightgreen fg=black italics]#{?#{==:#{client_key_table},prefix}, PREFIX ,}#[none]\
+#[bg=brightgreen fg=black italics]#{?#{==:#{client_key_table},resize}, RESIZE ,}#[none]\
+#[bg=green fg=black bright italics]#{?window_zoomed_flag, ZOOMED ,}#[none]\
