refactor(tmux): clean commented old `FORMATS`

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -299,7 +299,7 @@ set -ag status-right "\
 		#[bg=default fg=yellow bold]#[none]\
 	}\
 }\
-#[bg=yellow fg=black bold]   #{session_name} #[none]\
+#[bg=yellow fg=black bold]   #{host} #[none]\
 #[fg=brightgreen]\
 #[bg=brightgreen fg=black bold] %d-%b-%Y #[none]\
 #[fg=green]\
@@ -308,8 +308,3 @@ set -ag status-right "\
 #[bg=brightgreen fg=yellow]\
 "
 set -g status-right-length 500
-
-
-#[bg=brightgreen fg=black italics]#{?#{==:#{client_key_table},prefix}, PREFIX ,}#[none]\
-#[bg=brightgreen fg=black italics]#{?#{==:#{client_key_table},resize}, RESIZE ,}#[none]\
-#[bg=green fg=black bright italics]#{?window_zoomed_flag, ZOOMED ,}#[none]\
