chore(foot): add freedesktop `fontconfig` reference

--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -5,6 +5,7 @@
 login-shell=no
 term=foot
 
+# https://freedesktop.org/software/fontconfig/fontconfig-user.html
 font=SF Mono:pixelsize=16:antialias=true:style=Regular, Twemoji:pixelsize=16, Symbols Nerd Font:pixelsize=16:antialias=true
 font-bold=SF Mono:pixelsize=16:antialias=true:style=Semibold
 font-italic=SF Mono:pixelsize=16:antialias=true:style=Light Italic
@@ -218,3 +219,5 @@ font-monospace-warn=no
 dim-amount=1.5
 bold-text-in-bright-amount=1.1
 surface-bit-depth=8-bit
+
+# vim: ft=confini
