chore(yazi): update to `v25.5.31`

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -4,6 +4,7 @@
 $mod = SUPER
 $terminal = footclient
 $floatingTerminal = $terminal -a floating-foot -e tmux new-session -A -s Scratchpad
+# $fileManager = $terminal -a Yazi --title "🗂  File Manager" bash -c "yazi"
 $fileManager = $terminal -a Yazi --title "🗂  File Manager" bash -c "env YAZI_LOG=debug yazi"
 $menu = ~/.config/rofi/launcher.sh
 $bar = togglewaybar.sh
