feat(tmux): open file explorer with `PREFIX e`

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -48,8 +48,8 @@ bind-key -N "Reload tmux config"                    -Tprefix R {
 	display "Config reloaded!"
 }
 # split panes
-bind-key -N "Create a new pane (horizontal split)"  -Troot C-Enter split-window -h
-bind-key -N "Create a new pane (vertical split)"    -Troot C-M-Enter split-window -v
+bind-key -N "Create a new pane (horizontal split)"  -Troot C-Enter split-window -h -c '#{pane_current_path}'
+bind-key -N "Create a new pane (vertical split)"    -Troot C-M-Enter split-window -v -c '#{pane_current_path}'
 
 # Copy mode bindings
 bind-key -N "Begin selection"    -Tcopy-mode-vi v send-keys -X begin-selection
@@ -207,11 +207,18 @@ set-option -wg synchronize-panes off
 set-option -wg window-active-style 'default'
 set-option -wg window-style 'default'
 
+### YAZI ###
 # enable Yazi's image preview to work correctly in tmux
 # https://yazi-rs.github.io/docs/image-preview/#tmux
 set -g allow-passthrough on
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
+if-shell -b 'command -v yazi' {
+	bind-key -N "Open file explorer (Yazi)" -Tprefix e split-window -v -c '#{pane_current_path}' -Z yazi
+} {
+#else
+	bind-key -N "Open file explorer"        -Tprefix e display "File explorer not installed"
+}
 
 ### STATUS BAR ###
 #     │
