--- a/config/yazi/package.toml
+++ b/config/yazi/package.toml
@@ -1,17 +1,17 @@
 [[plugin.deps]]
 use = "yazi-rs/plugins:smart-enter"
-rev = "ec97f88"
-hash = "20dc1361fc474934c6bf321110eb8e12"
-
-[[plugin.deps]]
-use = "yazi-rs/plugins:max-preview"
-rev = "ec97f88"
-hash = "2bcf0c353c61b92662b372a69ff97057"
+rev = "de53d90"
+hash = "56fdabc96fc1f4d53c96eb884b02a5be"
 
 [[plugin.deps]]
 use = "macydnah/office"
 rev = "d1e3e51"
 hash = "35241f7d85abc5a0d2441020bc597ceb"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:toggle-pane"
+rev = "de53d90"
+hash = "d6f60c24d8c0cf57a855bf46115b2502"
 
 [flavor]
 deps = []
