refactor(tmux): scroll with mouse to enter copy mode

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -52,9 +52,15 @@ bind-key -N "Create a new pane (horizontal split)"  -Troot C-Enter split-window 
 bind-key -N "Create a new pane (vertical split)"    -Troot C-M-Enter split-window -v -c '#{pane_current_path}'
 
 # Copy mode bindings
-bind-key -N "Begin selection"    -Tcopy-mode-vi v send-keys -X begin-selection
-bind-key -N "Yank the selection" -Tcopy-mode-vi y send-keys -X copy-pipe 'wl-copy -n'
-bind-key -N "Yank entire line"   -Tcopy-mode-vi Y send-keys -X copy-pipe-line 'wl-copy -n'
+bind-key -N "Begin selection"                      -Tcopy-mode-vi v send-keys -X begin-selection
+bind-key -N "Copy entire line to clipboard"        -Tcopy-mode-vi Y send-keys -X copy-line
+bind-key -N "Copy selection to clipboard"          -Tcopy-mode-vi y send-keys -X copy-selection
+bind-key -N "Copy selection to clipboard (mouse)"  -Tcopy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection
+bind-key -N "Scroll with mouse to enter copy mode" -Troot WheelUpPane {
+	if-shell -t '#{mouse_any_flag}' -F 'send-keys -M' {
+		if-shell -t '#{pane_in_mode}' -F 'send-keys -M' { copy-mode }
+	}
+}
 
 # Resize mode bindings
 set-option -g repeat-time 500
@@ -67,9 +73,6 @@ bind-key -r -N "Resize the pane down by 1"  -Tresize C-j resize-pane -D 1
 bind-key -r -N "Resize the pane left by 1"  -Tresize C-h resize-pane -L 1
 bind-key -r -N "Resize the pane right by 1" -Tresize C-l resize-pane -R 1
 bind-key -N "Enter resize mode"             -Tprefix r switch-client -Tresize
-
-# Pipe copied selections to system clipboard trough Wayland-copy
-bind-key -Tcopy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "wl-copy -n"
 
 # Don't exit with EOF
 set-environment -g 'IGNOREEOF' 1
@@ -87,7 +90,7 @@ set-option -s extended-keys off
 set-option -s extended-keys-format 'xterm'
 set-option -s focus-events on
 set-option -s history-file ''
-set-option -s set-clipboard external
+set-option -s set-clipboard on
 # https://gist.github.com/andersevenrud/015e61af2fd264371032763d4ed965b6#tmux
 set-option -as terminal-overrides ",$TERM:RGB"
 
@@ -306,7 +309,7 @@ set -ag status-right "\
 		#[bg=default fg=yellow bold]#[none]\
 	}\
 }\
-#[bg=yellow fg=black bold]   #{host} #[none]\
+#[bg=yellow fg=black bold]   #{session_name} #[none]\
 #[fg=brightgreen]\
 #[bg=brightgreen fg=black bold] %d-%b-%Y #[none]\
 #[fg=green]\
