fix(tmux): `WheelUpPane` for `#{mouse_any_flag}`
see https://www.reddit.com/r/neovim/comments/pze7xs/tmux_mouse_scrolling_up_solved/

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -57,8 +57,11 @@ bind-key -N "Copy entire line to clipboard"        -Tcopy-mode-vi Y send-keys -X
 bind-key -N "Copy selection to clipboard"          -Tcopy-mode-vi y send-keys -X copy-selection
 bind-key -N "Copy selection to clipboard (mouse)"  -Tcopy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection
 bind-key -N "Scroll with mouse to enter copy mode" -Troot WheelUpPane {
-	if-shell -t '#{mouse_any_flag}' -F 'send-keys -M' {
-		if-shell -t '#{pane_in_mode}' -F 'send-keys -M' { copy-mode }
+	if-shell -F '#{mouse_any_flag}' {
+		send-keys -M WheelUpPane
+	} {
+	#else
+		copy-mode -e
 	}
 }
 
