fix(tmux): show `#{host}` instead of `#{session_name}`

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -312,7 +312,7 @@ set -ag status-right "\
 		#[bg=default fg=yellow bold]#[none]\
 	}\
 }\
-#[bg=yellow fg=black bold]   #{session_name} #[none]\
+#[bg=yellow fg=black bold]   #{host} #[none]\
 #[fg=brightgreen]\
 #[bg=brightgreen fg=black bold] %d-%b-%Y #[none]\
 #[fg=green]\
