--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -126,7 +126,7 @@ set-option -g set-titles on
 set-option -g set-titles-string "#{user}@#h: #W"
 # statusbar
 set-option -g status on
-set-option -g status-position bottom
+set-option -g status-position top
 set-option -g status-interval 60
 set-option -g status-justify 'left'
 set-option -g status-keys 'emacs'
