refactor(foot): change `urls` underline color to blue
specifically brightblue

--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -118,11 +118,11 @@ bright6=0a9b81   # bright cyan
 bright7=f8f8f8   # bright white
 
 ## Misc colors
-jump-labels=          171717 ffa800  # regular0 regular3 # black yellow
+jump-labels=          171717 289cd5  # regular0 regular3 # black brightblue
 scrollback-indicator= 171717 289cd5  # regular0 bright4  # black brightblue
 search-box-no-match=  171717 d81765  # regular0 regular1 # black red
 search-box-match=     171717 ffa800  # regular0 regular3 # black yellow
-urls=                 ffa800         # regular3 # yellow
+urls=                 289cd5         # regular3 # brightblue
 flash=                ffa800         # regular3 # yellow
 flash-alpha=0.1
 
