feat(yazi): add `yazi-rs/plugins:mount` plugin

--- a/config/yazi/package.toml
+++ b/config/yazi/package.toml
@@ -13,5 +13,10 @@ use = "yazi-rs/plugins:toggle-pane"
 rev = "de53d90"
 hash = "d6f60c24d8c0cf57a855bf46115b2502"
 
+[[plugin.deps]]
+use = "yazi-rs/plugins:mount"
+rev = "de53d90"
+hash = "f10a14e823382d90fab5b3ee54cb38fe"
+
 [flavor]
 deps = []
