refactor(yazi): clean keymap `Selection` section

--- a/config/yazi/keymap.toml
+++ b/config/yazi/keymap.toml
@@ -36,31 +36,29 @@ keymap = [
 	{ on = "<C-e>",run = "seek 1",                        desc = "Seek down in the preview" },
 
 	# Selection
-	{ on = "<Space>", run = [ "toggle", "arrow 1" ], desc = "Toggle the current selection state" },
-	{ on = "v",       run = "visual_mode",           desc = "Enter visual mode (selection mode)" },
-	{ on = "V",       run = "visual_mode --unset",   desc = "Enter visual mode (unset mode)" },
-	{ on = "<C-a>",   run = "toggle_all --state=on", desc = "Select all files" },
-	{ on = "<C-r>",   run = "toggle_all",            desc = "Inverse selection of all files" },
+	{ on = "<Space>",run = [ "toggle", "arrow 1" ],desc = "Toggle the current selection state" },
+	{ on = "v",      run = "visual_mode",          desc = "Enter visual mode (selection mode)" },
+	{ on = "V",      run = "visual_mode --unset",  desc = "Enter visual mode (unset mode)" },
+	{ on = "<C-a>",  run = "toggle_all --state=on",desc = "Select all files" },
+	{ on = "<C-r>",  run = "toggle_all",           desc = "Inverse selection of all files" },
 
-	# Operation
-	{ on = "<Tab>", run = "spot", desc = "Spot hovered file" },
-#	{ on = "<Enter>",   run = "plugin --sync smart-enter",     desc = "Open file/Enter directory" },
-#	For upcoming Yazi 0.4 (nightly version):
-	{ on = "<Enter>",   run = "plugin smart-enter",             desc = "Open file/Enter directory" },
-	{ on = "<C-Enter>", run = "open --interactive",             desc = "Open selected files interactively" },
-	{ on = "-",         run = "link",                           desc = "Symlink the absolute path of yanked files" },
-	{ on = "_",         run = "link --relative",                desc = "Symlink the relative path of yanked files" },
-	{ on = "<Delete>",  run = "remove --permanently",           desc = "Permanently delete selected files" },
-	{ on = "<Insert>",  run = "create",                         desc = "Create a file (ends with / for directories)" },
-	{ on = "r",         run = "rename --cursor=before_ext",     desc = "Rename selected file(s)" },
-	{ on = ":",         run = 'shell " ; read" --block --cursor=0  --interactive', desc = "Run a shell command (block until finishes)" },
-	{ on = "<F12>",     run = 'shell "$SHELL" --block confirm', desc = "Open shell here" },
-	{ on = ".",         run = "hidden toggle",                  desc = "Toggle the visibility of hidden files" },
-	{ on = "s",         run = "search fd",                      desc = "Search files by name using fd" },
-	{ on = "S",         run = "search rg",                      desc = "Search files by content using ripgrep" },
-	{ on = "<C-s>",     run = "escape --search",                desc = "Cancel the ongoing search" },
-	{ on = "z",         run = "plugin zoxide",                  desc = "Jump to a directory using zoxide" },
-	{ on = "Z",         run = "plugin fzf",                     desc = "Jump to a directory or reveal a file using fzf" },
+	# Functions
+	{ on = "<Tab>",    run = "spot",                          desc = "Spot hovered file" },
+	{ on = "<C-Enter>",run = "open --interactive",            desc = "Open selected files interactively" },
+	{ on = "-",        run = "link",                          desc = "Symlink the absolute path of yanked files" },
+	{ on = "_",        run = "link --relative",               desc = "Symlink the relative path of yanked files" },
+	{ on = "<Delete>", run = "remove --permanently",          desc = "Permanently delete selected files" },
+	{ on = "<Insert>", run = "create",                        desc = "Create a file (ends with / for directories)" },
+	{ on = "M",        run = "plugin mount",                  desc = "Mount manager" },
+	{ on = "r",        run = "rename --cursor=before_ext",    desc = "Rename selected file(s)" },
+	{ on = ":",        run = 'shell " ; read" --block --cursor=0  --interactive', desc = "Run a shell command (block until finishes)" },
+	{ on = "<F12>",    run = 'shell "$SHELL" --block confirm',desc = "Open shell here" },
+	{ on = ".",        run = "hidden toggle",                 desc = "Toggle the visibility of hidden files" },
+	{ on = "s",        run = "search fd",                     desc = "Search files by name using fd" },
+	{ on = "S",        run = "search rg",                     desc = "Search files by content using ripgrep" },
+	{ on = "<C-s>",    run = "escape --search",               desc = "Cancel the ongoing search" },
+	{ on = "z",        run = "plugin zoxide",                 desc = "Jump to a directory using zoxide" },
+	{ on = "Z",        run = "plugin fzf",                    desc = "Jump to a directory or reveal a file using fzf" },
 
 	# Linemode
 	{ on = ["m","s"], run = "linemode size",        desc = "Set linemode to size" },
