--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -22,6 +22,17 @@ bind-key -N "Move the current pane to the left"                 -Troot C-M-h swa
 bind-key -N "Move the current pane down"                        -Troot C-M-j swap-pane -d -t '{down-of}'
 bind-key -N "Move the current pane up"                          -Troot C-M-k swap-pane -d -t '{up-of}'
 bind-key -N "Move the current pane to the right"                -Troot C-M-l swap-pane -d -t '{right-of}'
+bind-key -N "Select window 1"                                   -Troot M-1 select-window -t 1
+bind-key -N "Select window 2"                                   -Troot M-2 select-window -t 2
+bind-key -N "Select window 3"                                   -Troot M-3 select-window -t 3
+bind-key -N "Select window 4"                                   -Troot M-4 select-window -t 4
+bind-key -N "Select window 5"                                   -Troot M-5 select-window -t 5
+bind-key -N "Select window 6"                                   -Troot M-6 select-window -t 6
+bind-key -N "Select window 7"                                   -Troot M-7 select-window -t 7
+bind-key -N "Select window 8"                                   -Troot M-8 select-window -t 8
+bind-key -N "Select window 9"                                   -Troot M-9 select-window -t 9
+bind-key -N "Select window 10"                                  -Troot M-0 select-window -t 10
+
 
 # General bindings
 bind-key -N "Break current pane to it's own window" -Tprefix ! break-pane
