--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -127,6 +127,42 @@ flash=                ffa800         # regular3 # yellow
 flash-alpha=0.1
 
 [colors2]
+alpha=0.95
+alpha-mode=all
+
+foreground=444444
+background=eeeeee
+
+cursor=040404 76b539
+
+## Normal/regular colors (color palette 0-7)
+regular0=171717  # black
+regular1=d81765  # red
+regular2=97d01a  # green
+regular3=ffa800  # yellow
+regular4=16b1fb  # blue
+regular5=ff2491  # magenta
+regular6=0fdcb6  # cyan
+regular7=ebebeb  # white
+
+## Bright colors (color palette 8-15)
+bright0=801943   # bright black
+bright1=ff0000   # bright red
+bright2=76b639   # bright green
+bright3=e1a126   # bright yellow
+bright4=289cd5   # bright blue
+bright5=ff2491   # bright magenta
+bright6=0a9b81   # bright cyan
+bright7=f8f8f8   # bright white
+
+## Misc colors
+jump-labels=          171717 289cd5  # regular0 regular3 # black brightblue
+scrollback-indicator= 171717 289cd5  # regular0 bright4  # black brightblue
+search-box-no-match=  171717 d81765  # regular0 regular1 # black red
+search-box-match=     171717 ffa800  # regular0 regular3 # black yellow
+urls=                 289cd5         # regular3 # brightblue
+flash=                ffa800         # regular3 # yellow
+flash-alpha=0.1
 
 [csd]
 preferred=none
