feat(bashrc,foot): add `fzf` confs, envs, bindings
- Add `fzf` environment variables to `bashrc`

- Add `fzf` shell integration configs to `bashrc`

- Add custom `fzf` completion private functions to find with `fd`

- Refactor `foot` terminal bindings to better integration with the shell
  and `fzf`
  - "Ctrl+Shift+KEY" bindings for the terminal
  - "\C-KEY" and "\eKEY for the shell (i.e. Ctrl+KEY and Alt+KEY)

--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -189,8 +189,8 @@ scrollback-down-line=Mod1+j
 scrollback-home=Shift+Home
 scrollback-end=Shift+End
 
-clipboard-copy=Mod1+c
-clipboard-paste=Mod1+v
+clipboard-copy=Control+Shift+c
+clipboard-paste=Control+Shift+v
 primary-paste=none
 
 search-start=Control+Shift+r
@@ -205,9 +205,9 @@ minimize=none
 maximize=none
 fullscreen=none
 
-show-urls-launch=Mod1+l
+show-urls-launch=Control+Shift+l
 show-urls-persistent=none
-show-urls-copy=Mod1+y
+show-urls-copy=Control+Shift+y
 
 regex-launch=none
 regex-copy=none
@@ -219,7 +219,7 @@ unicode-input=Control+Shift+u
 
 color-theme-switch-1=none
 color-theme-switch-2=none
-color-theme-toggle=none
+color-theme-toggle=Control+Shift+t
 
 # quit=Control+q
 
@@ -230,7 +230,7 @@ delete-next-word=none
 extend-to-word-boundary=none
 extend-to-next-whitespace=none
 extend-backward-to-word-boundary=none
-clipboard-paste=Mod1+v
+clipboard-paste=Control+Shift+v
 primary-paste=none
 
 [url-bindings]
