refactor(hyprland): update main doc references

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,6 +1,10 @@
 # ~/.config/hypr/hyprland.conf
 
-# https://wiki.hyprland.org/Configuring/Keywords/
+# Refer to the wiki for more information.
+# https://wiki.hypr.land/Configuring/
+# https://wiki.hypr.land/Hypr-Ecosystem/hyprlang/
+
+# https://wiki.hypr.land/Hypr-Ecosystem/hyprlang/#defining-variables
 $mod = SUPER
 $terminal = footclient
 $floatingTerminal = $terminal -a floating-foot -e tmux new-session -A -s Scratchpad
@@ -20,11 +24,19 @@ monitor = LVDS-1, 1366x768@60, 0x0, 1, transform, 0
 monitor = HDMI-A-1, 1680x1050@60, -1050x-912, 1, transform, 1
 #monitor = HDMI-A-1, disable
 
+# Plug-and-play any monitors not specified with an explicit rule
+# automatically preferred resolution and placed on the right of the other(s)
+monitor = , preferred, auto, 1
+
+# https://wiki.hypr.land/Configuring/Keywords/#executing
 exec-once = pcmanfm -d
 exec-once = foot --server
 exec-once = swaybg --output LVDS-1 --mode fill --image /usr/share/backgrounds/fgm.png
 exec-once = swaybg --output HDMI-A-1 --mode fit --color 000000 --image /usr/share/backgrounds/pluto-portrait-enhanced-color.png
+exec-once = $bar
 
+# https://wiki.hypr.land/Configuring/Environment-variables/
+# https://wiki.hypr.land/Configuring/Keywords/#setting-the-environment
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = GDK_BACKEND,wayland
@@ -448,4 +460,4 @@ windowrulev2 = float,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
 # windowrulev2 = tile,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
 windowrulev2 = pin,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
 
-# vim: ft=hyprlang ts=8 sts=4 sw=4 et ai
+# vim: ft=hyprlang ts=4 sts=0 sw=4 noet ai
