feat(hyprland): bind `XF86` media controls to `mpc`

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -280,7 +280,11 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Binds/
 
-# Volume/Brightness Control
+# Media/Volume/Brightness Control
+bind = ,XF86AudioPlay, exec, mpc toggle
+bind = ,XF86AudioPause, exec, mpc pause
+bind = ,XF86AudioNext, exec, mpc next
+bind = ,XF86AudioPrev, exec, mpc cdprev
 bind = ,XF86AudioMute, exec, volfade-rs toggle-mute
 bind = ,XF86AudioRaiseVolume, exec, volfade-rs increase 11
 bind = ,XF86AudioLowerVolume, exec, volfade-rs decrease 7
