fix(hyprland): update `swayimg` class regex rule

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -447,7 +447,7 @@ windowrulev2 = pseudo,class:^(scrcpy)$,title:^(SM-G935F)$
 #windowrule = rounding 0, floating:0, onworkspace:f[1]s[false]
 
 # swayimg
-windowrulev2 = immediate 1, class:^(swayimg)$
+windowrule = immediate 1, class:^(swayimg.*)$
 
 # waybar
 layerrule = animation slide,waybar
