refactor(hyprland): add `waybar` `layerrule`s

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -450,7 +450,11 @@ windowrulev2 = pseudo,class:^(scrcpy)$,title:^(SM-G935F)$
 windowrule = immediate 1, class:^(swayimg.*)$
 
 # waybar
+layerrule = blur,waybar
+layerrule = blurpopups,waybar
+layerrule = ignorezero,waybar
 layerrule = animation slide,waybar
+layerrule = xray 1,waybar
 
 # V4L2 Viewer
 windowrulev2 = opaque,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
