feat(hyprland): set `text_color_inactive`
"set the text color for inactive and/or locked windows' groupbar titles"
(jirassimok, 2025, https://github.com/hyprwm/Hyprland/pull/10667)

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -182,6 +182,7 @@ group {
     # https://wiki.hyprland.org/Configuring/Variables/#groupbar
     groupbar {
         enabled = true
+        font_family = SF Pro Display
         font_size = 14
         font_weight_active = medium
         font_weight_inactive = normal
@@ -198,6 +199,7 @@ group {
         round_only_edges = false
         gradient_round_only_edges = true
         text_color = rgba(000000dd)
+        text_color_inactive = rgba(ffffff66)
         col.active = rgba(97d01add)
         col.inactive = rgba(43485988)
         gaps_in = 0
