--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -216,7 +216,7 @@ misc {
     font_family = SF Pro Display
     splash_font_family = SF Pro Display
     force_default_wallpaper = -1
-    vfr = false
+    vfr = true # https://github.com/hyprwm/hyprland-wiki/issues/193
     vrr = 0
     mouse_move_enables_dpms = false
     key_press_enables_dpms = false
