refactor(hyprland): add binding to reload config
- Reload config with "Super+Shift+R"

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -319,7 +319,7 @@ bind = $mod, F, fullscreen, 0
 bind = $mod, Tab, workspace, previous
 bind = $mod, space, togglefloating,
 bind = $mod, X, exec, togglehyprtab.sh 
-#bind = $mod, X, exec, togglegroup
+bind = $mod SHIFT, R, exec, hyprctl reload
 bind = $mod SHIFT, Escape, exec, hyprctl dispatcher exit
 
 # Submap: For a global unbinded environment
