--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -62,6 +62,11 @@ depends = ["mpv", "yt-dlp"]
 "config/nvim" = {target = "~/.config/nvim", type = "symbolic", recurse = true}
 
 
+## PDF viewer ##
+[zathura.files]
+"config/zathura" = {target = "~/.config/zathura", type = "symbolic", recurse = false}
+
+
 ## Wayland Compositors ##
 [hyprland.files]
 "config/hypr" = {target = "~/.config/hypr", type = "symbolic", recurse = false}
