--- a/.dotter/HuaaaliP0NKH-ER0S.toml
+++ b/.dotter/HuaaaliP0NKH-ER0S.toml
@@ -4,7 +4,7 @@ includes = []
 #packages = ["shell", "i3", "XUtils", "mpv-yt", "tridactyl", "yazi"]
 
 # Packages to deploy a Wayland environment
-packages = ["shell", "terminal", "hyprland", "WUtils", "mpv-yt", "tridactyl", "yazi", "neovim", "rust", "zathura"]
+packages = ["shell", "terminal", "hyprland", "WUtils", "mpv-yt", "mpd", "tridactyl", "yazi", "neovim", "rust", "zathura"]
 
 [files]
 "config/alacritty" = ""
