--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -404,6 +404,11 @@ workspace = 8, monitor:LVDS-1
 workspace = 9, monitor:LVDS-1
 workspace = 10, monitor:LVDS-1, default:true
 
+# firefoxd
+workspace = special:firefoxd, on-created-empty:firefox --new-window about:blank
+windowrule = workspace special:firefoxd,class:^(firefoxd)$
+bind = , XF86Launch2, togglespecialworkspace, firefoxd
+
 # floating-foot
 #windowrulev2 = size 677 382,class:^(floating-foot)$
 windowrulev2 = size 675 364,class:^(floating-foot)$
