refactor(hyprland): disable touchpad while typing
and other touchpad configurations

- Change `drag_lock` to mode '2' to lock the touchpad dragging until
  press, instead of locking and unlocking it with a timeout

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -154,13 +154,18 @@ input {
 
     # https://wiki.hyprland.org/Configuring/Variables/#touchpad
     touchpad {
+		disable_while_typing = true
         natural_scroll = true
         scroll_factor = 1.3
+		middle_button_emulation = false
         tap_button_map = lrm
         clickfinger_behavior = true
-        drag_lock = true
+		tap-to-click = true
+        drag_lock = 2
+		tap-and-drag = true
         flip_x = false
         flip_y = false
+		# drag_3fg = 0
     }
 }
 
