refactor(hyprland): define repeat and delay rates
and other XKB settings

- Disable NumLock by default

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -139,15 +139,23 @@ animations {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
+	# XKB Settings, see file:///usr/share/X11/xkb/rules/base.lst
+	# and https://wiki.hypr.land/Configuring/Variables/#xkb-settings
     kb_model = pc104
     kb_layout = us
     kb_variant = altgr-intl
     kb_options =
     kb_rules =
+	kb_file =
+	numlock_by_default = false
+	resolve_binds_by_sym = false
+	repeat_rate = 25
+	repeat_delay = 600
 
     sensitivity = 0.0
     accel_profile = adaptive
     force_no_accel = false
+	left_handed = false
     scroll_method = 2fg
     follow_mouse = 2
     off_window_axis_events = 0
