feat(hypridle): add `hypridle` config
Hyprland's idle daemon

- Change Hyprland's config to enable DPMS with mouse and keyboard, so
  its consistent with some hypridle configs

- Fix `key_press_enables_dpms = true` turning the display on
  immediately, as it register the key release event as "activity"
  see https://github.com/hyprwm/Hyprland/issues/2954

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -231,8 +231,8 @@ misc {
     force_default_wallpaper = -1
     vfr = true # https://github.com/hyprwm/hyprland-wiki/issues/193
     vrr = 0
-    mouse_move_enables_dpms = false
-    key_press_enables_dpms = false
+    mouse_move_enables_dpms = true
+    key_press_enables_dpms = true
     animate_manual_resizes = false
     animate_mouse_windowdragging = false
     disable_autoreload = false
@@ -312,8 +312,9 @@ binde = ,XF86MonBrightnessDown, exec, xbacklight -dec 3 -fps 60 -time 111 -perce
 bind = SHIFT, XF86MonBrightnessUp, exec, hyprctl keyword decoration:screen_shader ' '
 bind = SHIFT, XF86MonBrightnessDown, exec, hyprctl keyword decoration:screen_shader ~/.config/hypr/blue-light-filter.frag
 bind = $mod, XF86MonBrightnessUp, exec, hyprctl dispatch dpms on
-bind = $mod, XF86MonBrightnessDown, exec, hyprctl dispatch dpms off
-bind = $mod, F7, exec, hyprctl dispatch dpms toggle
+bind = $mod, XF86MonBrightnessDown, exec, sleep 1 && hyprctl dispatch dpms off
+# regarding sleep(1), see https://github.com/hyprwm/Hyprland/issues/2954
+bind = $mod, F7, exec, sleep 1 && hyprctl dispatch dpms toggle
 bind = $mod, Menu, exec, kblight
 
 # Keybinds/shortcuts for applications
@@ -421,6 +422,11 @@ workspace = 10, monitor:LVDS-1, default:true
 workspace = special:firefoxd, on-created-empty:firefox --new-window about:blank
 windowrule = workspace special:firefoxd,class:^(firefoxd)$
 bind = , XF86Launch2, togglespecialworkspace, firefoxd
+
+# floating-editor
+windowrule = size 675 364,class:^(floating-editor)$
+windowrule = float,class:^(floating-editor)$
+windowrule = center,class:^(floating-editor)$
 
 # floating-foot
 #windowrulev2 = size 677 382,class:^(floating-foot)$
