refactor(hypridle): restore 100% absolute brightness
instead of perceived brightness

--- a/config/hypr/hypridle.conf
+++ b/config/hypr/hypridle.conf
@@ -21,7 +21,7 @@ listener {
 	# Dim screen brightness after 5 minutes of inactivity
 	timeout = 300
 	on-timeout = xbacklight -set 50 -perceived -time 200 -fps 60
-	on-resume = xbacklight -set 100 -perceived -time 200 -fps 60
+	on-resume = xbacklight -set 100 -time 150 -fps 60
 }
 listener {
 	# Turn off the screen after 15 minutes of inactivity
