--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -37,19 +37,33 @@ exec-once = $bar
 
 # https://wiki.hypr.land/Configuring/Environment-variables/
 # https://wiki.hypr.land/Configuring/Keywords/#setting-the-environment
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
-env = GDK_BACKEND,wayland
-env = LIBVA_DRIVER_NAME,i965
-env = LIBVA_DRIVERS_PATH,/usr/lib/dri
-env = MOZ_ENABLE_WAYLAND,1
-env = QT_QPA_PLATFORM,wayland-egl
-env = SDL_VIDEODRIVER,wayland
-env = XDG_SESSION_TYPE,wayland
-env = _JAVA_AWT_WM_NONREPARENTING,1
-env = BROWSER,firefox
 env = TERMINAL,$terminal
 env = EDITOR,$editor
+env = BROWSER,firefox
+
+env = GDK_BACKEND,wayland,x11,*
+# env = QT_QPA_PLATFORM,wayland-egl
+env = QT_QPA_PLATFORM,wayland;xcb
+env = SDL_VIDEODRIVER,wayland
+env = CLUTTER_BACKEND,wayland
+env = _JAVA_AWT_WM_NONREPARENTING,1
+
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
+
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+# env = QT_QPA_PLATFORMTHEME,qt5ct
+
+# env = GTK_THEME,Adwaita
+env = XCURSOR_THEME,McMojave
+env = XCURSOR_SIZE,24
+env = HYPRCURSOR_SIZE,24
+
+# https://wiki.archlinux.org/title/Hardware_video_acceleration#Configuring_VA-API
+env = LIBVA_DRIVER_NAME,i965
+env = LIBVA_DRIVERS_PATH,/usr/lib/dri
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
