--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -78,7 +78,17 @@ general {
     #col.active_border = rgba(97d01add) rgba(d72c1add) rgba(f7d01add) 45deg
     col.active_border = rgba(97d01add)
     layout = dwindle
+	# https://wiki.hypr.land/Configuring/Tearing/
     allow_tearing = true
+
+	# https://wiki.hypr.land/Configuring/Variables/#snap
+	snap {
+		enabled = true
+		window_gap = 10
+		monitor_gap = 10
+		border_overlap = false
+		respect_gaps = true
+	}
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
@@ -107,6 +117,9 @@ decoration {
         brightness = 0.8172
         vibrancy = 0.1696
         vibrancy_darkness = 0.0
+		special = false
+		popups = false
+		input_methods = false
     }
 
     # https://wiki.hyprland.org/Configuring/Variables/#shadow
@@ -146,8 +159,8 @@ animations {
     animation = border, 0, 2, easeOutExpo
     animation = borderangle, 0, 8, easeInOutExpo, once
     animation = workspaces, 1, 6, default, slide
-    #animation = workspacesIn, 1, 6, easeOutBack, slide
-    #animation = workspacesOut, 1, 6, easeOutBack, fade
+    # animation = workspacesIn, 1, 6, easeOutBack, slide
+    # animation = workspacesOut, 1, 6, easeOutBack, fade
     animation = specialWorkspace, 1, 5, overshot, slidevert
 }
 
@@ -166,6 +179,7 @@ input {
 	repeat_rate = 25
 	repeat_delay = 600
 
+	# Mouse
     sensitivity = 0.0
     accel_profile = adaptive
     force_no_accel = false
@@ -187,7 +201,7 @@ input {
 		tap-and-drag = true
         flip_x = false
         flip_y = false
-		# drag_3fg = 0
+		drag_3fg = 0
     }
 }
 
@@ -256,16 +270,30 @@ misc {
     mouse_move_focuses_monitor = true
     background_color = rgba(111111ff)
     close_special_on_empty = true
-    new_window_takes_over_fullscreen = 2
+    new_window_takes_over_fullscreen = 1
     middle_click_paste = false
     render_unfocused_fps = 10
+	enable_anr_dialog = false
+	anr_missed_pings = 1
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#binds
 binds {
+	workspace_back_and_forth = false
+	hide_special_on_workspace_change = false
     allow_workspace_cycles = true
+    movefocus_cycles_fullscreen = false
     movefocus_cycles_groupfirst = true
     window_direction_monitor_fallback = true
+}
+
+# https://wiki.hypr.land/Configuring/Variables/#xwayland
+xwayland {
+	enabled = true
+	use_nearest_neighbor = true
+	force_zero_scaling = false
+	# https://wiki.hypr.land/Configuring/XWayland/#abstract-unix-domain-socket
+	create_abstract_socket = false
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#opengl
@@ -273,18 +301,41 @@ opengl {
     nvidia_anti_flicker = false
 }
 
+# https://wiki.hypr.land/Configuring/Variables/#render
+render {
+	direct_scanout = 0
+	expand_undersized_textures = true
+	xp_mode = false
+	ctm_animation = 2
+	cm_fs_passthrough = 2
+	cm_enabled = true
+	send_content_type = false
+	cm_auto_hdr = 0
+}
+
 # https://wiki.hyprland.org/Configuring/Variables/#cursor
 cursor {
-    no_hardware_cursors = true
+	# invisible = false
+	sync_gsettings_theme = true
+    no_hardware_cursors = 1
     hotspot_padding = 5
     inactive_timeout = 2
     no_warps = false
     persistent_warps = true
     warp_on_change_workspace = 1
+	warp_on_toggle_special = 0
     default_monitor = LVDS-1
     zoom_factor = 1.000
+	zoom_rigid = false
     enable_hyprcursor = false
     hide_on_key_press = false
+}
+
+# https://wiki.hypr.land/Configuring/Variables/#ecosystem
+ecosystem {
+	no_update_news = true
+	no_donation_nag = true
+	enforce_permissions = false
 }
 
 # https://wiki.hyprland.org/Configuring/Dwindle-Layout/
@@ -340,6 +391,7 @@ bind = $mod, B, exec, $bar
 bind = $mod, E, exec, $fileManager
 bind = $mod, N, exec, networkmanager_dmenu
 bind = $mod, S, exec, $terminal -- $editor -c ":source ~/.config/vim/simplenoterc.vim | :SimplenoteList"
+bind = $mod SHIFT, C, exec, $terminal -D ~/.dotfiles -- $editor -c ":FzfLua files"
 
 # Window manager functions
 bind = $mod, Q, killactive
