--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -67,19 +67,19 @@ env = LIBVA_DRIVERS_PATH,/usr/lib/dri
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    border_size = 1
-    no_border_on_floating = false
-    gaps_in = 2
-    gaps_out = 4
-    gaps_workspaces = 40
-    #col.inactive_border = rgba(595959aa)
-    col.inactive_border = rgba(43485988)
-    #col.active_border = rgba(97d01add) rgba(f7d01add) rgba(d72c1add) 45deg
-    #col.active_border = rgba(97d01add) rgba(d72c1add) rgba(f7d01add) 45deg
-    col.active_border = rgba(97d01add)
-    layout = dwindle
+	border_size = 1
+	no_border_on_floating = false
+	gaps_in = 2
+	gaps_out = 4
+	gaps_workspaces = 40
+	#col.inactive_border = rgba(595959aa)
+	col.inactive_border = rgba(43485988)
+	#col.active_border = rgba(97d01add) rgba(f7d01add) rgba(d72c1add) 45deg
+	#col.active_border = rgba(97d01add) rgba(d72c1add) rgba(f7d01add) 45deg
+	col.active_border = rgba(97d01add)
+	layout = dwindle
 	# https://wiki.hypr.land/Configuring/Tearing/
-    allow_tearing = true
+	allow_tearing = true
 
 	# https://wiki.hypr.land/Configuring/Variables/#snap
 	snap {
@@ -93,186 +93,189 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
-    rounding_power = 4.0
-    active_opacity = 1.0
-    inactive_opacity = 0.95
-    fullscreen_opacity = 1.0
-    dim_inactive = false
-    dim_strength = 0.5
-    dim_special = 0.2
-    dim_around = 0.4
-    #screen_shader = ~/.config/hypr/blue-light-filter.frag
-    border_part_of_window = true
+	rounding = 10
+	rounding_power = 4.0
+	active_opacity = 1.0
+	inactive_opacity = 0.95
+	fullscreen_opacity = 1.0
+	dim_inactive = false
+	dim_strength = 0.5
+	dim_special = 0.2
+	dim_around = 0.4
+	# screen_shader = ~/.config/hypr/blue-light-filter.frag
+	border_part_of_window = true
 
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
-    blur {
-        enabled = true
-        size = 4
-        passes = 1
-        ignore_opacity = true
-        xray = true
-        noise = 0.0117
-        contrast = 0.8916
-        brightness = 0.8172
-        vibrancy = 0.1696
-        vibrancy_darkness = 0.0
+	# https://wiki.hyprland.org/Configuring/Variables/#blur
+	blur {
+		enabled = true
+		size = 4
+		passes = 1
+		ignore_opacity = true
+		xray = true
+		noise = 0.0117
+		contrast = 0.8916
+		brightness = 0.8172
+		vibrancy = 0.1696
+		vibrancy_darkness = 0.0
 		special = false
 		popups = false
 		input_methods = false
-    }
+	}
 
-    # https://wiki.hyprland.org/Configuring/Variables/#shadow
-    shadow {
-        enabled = true
-        range = 4
-        render_power = 4
-        sharp = false
-        ignore_window = true
-        color = rgba(1a1a1aee)
-        color_inactive = rgba(00000000)
-        offset = 0, 0
-        scale = 1.0
-    }
+	# https://wiki.hyprland.org/Configuring/Variables/#shadow
+	shadow {
+		enabled = true
+		range = 4
+		render_power = 4
+		sharp = false
+		ignore_window = true
+		color = rgba(1a1a1aee)
+		color_inactive = rgba(00000000)
+		offset = 0, 0
+		scale = 1.0
+	}
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 # file:///home/macydnah/.config/hypr/conf.d/bezier.conf
 source = conf.d/bezier.conf
 animations {
-    enabled = true
-    first_launch_animation = false
-    
-    # https://wiki.hyprland.org/Configuring/Animations/
-    animation = windowsIn, 1, 4, easeInOutExpo
-    animation = windowsOut, 0, 4, default, popin 100%
-    animation = windowsMove, 1, 4, easeOutExpo
-    animation = layersIn, 1, 2, easeOutCirc
-    animation = layersOut, 1, 4, easeOutExpo
-    animation = fade, 1, 4, default
-    animation = fadeIn, 1, 3, easeInBack
-    animation = fadeOut, 1, 2, easeOutExpo
-    animation = fadeSwitch, 1, 2, easeOutExpo
-    animation = fadeShadow, 1, 2, easeOutExpo
-    animation = fadeLayersIn, 1, 4, easeInSine
-    animation = fadeLayersOut, 1, 4, easeOutExpo
-    animation = border, 0, 2, easeOutExpo
-    animation = borderangle, 0, 8, easeInOutExpo, once
-    animation = workspaces, 1, 6, default, slide
-    # animation = workspacesIn, 1, 6, easeOutBack, slide
-    # animation = workspacesOut, 1, 6, easeOutBack, fade
-    animation = specialWorkspace, 1, 5, overshot, slidevert
+	enabled = true
+	first_launch_animation = false
+
+	# https://wiki.hyprland.org/Configuring/Animations/
+	animation = windowsIn, 1, 4, easeInOutExpo
+	animation = windowsOut, 0, 4, default, popin 100%
+	animation = windowsMove, 1, 4, easeOutExpo
+	animation = layersIn, 1, 2, easeOutCirc
+	animation = layersOut, 1, 4, easeOutExpo
+	animation = fade, 1, 4, default
+	animation = fadeIn, 1, 3, easeInBack
+	animation = fadeOut, 1, 2, easeOutExpo
+	animation = fadeSwitch, 1, 2, easeOutExpo
+	animation = fadeShadow, 1, 2, easeOutExpo
+	animation = fadeLayersIn, 1, 4, easeInSine
+	animation = fadeLayersOut, 1, 4, easeOutExpo
+	animation = border, 0, 2, easeOutExpo
+	animation = borderangle, 0, 8, easeInOutExpo, once
+	animation = workspaces, 1, 6, default, slide
+	# animation = workspacesIn, 1, 6, easeOutBack, slide
+	# animation = workspacesOut, 1, 6, easeOutBack, fade
+	animation = specialWorkspace, 1, 5, overshot, slidevert
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
 	# XKB Settings, see file:///usr/share/X11/xkb/rules/base.lst
 	# and https://wiki.hypr.land/Configuring/Variables/#xkb-settings
-    kb_model = pc104
-    kb_layout = us
-    kb_variant = altgr-intl
-    kb_options =
-    kb_rules =
+	kb_model = pc104
+	kb_layout = us
+	kb_variant = altgr-intl
+	kb_options =
+	kb_rules =
 	kb_file =
+
+	# Keyboard
 	numlock_by_default = false
 	resolve_binds_by_sym = false
 	repeat_rate = 25
 	repeat_delay = 600
 
 	# Mouse
-    sensitivity = 0.0
-    accel_profile = adaptive
-    force_no_accel = false
+	sensitivity = 0.0
+	accel_profile = adaptive
+	force_no_accel = false
 	left_handed = false
-    scroll_method = 2fg
-    follow_mouse = 2
-    off_window_axis_events = 0
+	scroll_method = 2fg
+	follow_mouse = 2
+	off_window_axis_events = 0
 
-    # https://wiki.hyprland.org/Configuring/Variables/#touchpad
-    touchpad {
+	# https://wiki.hyprland.org/Configuring/Variables/#touchpad
+	touchpad {
 		disable_while_typing = true
-        natural_scroll = true
-        scroll_factor = 1.3
+		natural_scroll = true
+		scroll_factor = 1.3
 		middle_button_emulation = false
-        tap_button_map = lrm
-        clickfinger_behavior = true
+		tap_button_map = lrm
+		clickfinger_behavior = true
 		tap-to-click = true
-        drag_lock = 2
+		drag_lock = 2
 		tap-and-drag = true
-        flip_x = false
-        flip_y = false
+		flip_x = false
+		flip_y = false
 		drag_3fg = 0
-    }
+	}
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
-    workspace_swipe_fingers = 3
-    workspace_swipe_min_fingers = true
-    workspace_swipe_distance = 150
-    workspace_swipe_min_speed_to_force = 0
-    workspace_swipe_cancel_ratio = 0.0
+	workspace_swipe = false
+	workspace_swipe_fingers = 3
+	workspace_swipe_min_fingers = true
+	workspace_swipe_distance = 150
+	workspace_swipe_min_speed_to_force = 0
+	workspace_swipe_cancel_ratio = 0.0
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#group
 group {
-    auto_group = true
-    col.border_active = rgba(97d01add)
-    col.border_inactive = rgba(43485988)
-    # https://wiki.hyprland.org/Configuring/Variables/#groupbar
-    groupbar {
-        enabled = true
-        font_family = SF Pro Display
-        font_size = 14
-        font_weight_active = medium
-        font_weight_inactive = normal
-        gradients = true
-        height = 14
-        indicator_gap = 0
-        indicator_height = 0
-        stacked = false
-        render_titles = true
-        text_offset = 0
-        scrolling = false
-        rounding = 4
-        gradient_rounding = 4
-        round_only_edges = false
-        gradient_round_only_edges = true
-        text_color = rgba(000000dd)
-        text_color_inactive = rgba(ffffff66)
-        col.active = rgba(97d01add)
-        col.inactive = rgba(43485988)
-        gaps_in = 0
-        gaps_out = 0
-        keep_upper_gap = false
+	auto_group = true
+	col.border_active = rgba(97d01add)
+	col.border_inactive = rgba(43485988)
+
+	# https://wiki.hyprland.org/Configuring/Variables/#groupbar
+	groupbar {
+		enabled = true
+		font_family = SF Pro Display
+		font_size = 14
+		font_weight_active = medium
+		font_weight_inactive = normal
+		gradients = true
+		height = 14
+		indicator_gap = 0
+		indicator_height = 0
+		stacked = false
+		render_titles = true
+		text_offset = 0
+		scrolling = false
+		rounding = 4
+		gradient_rounding = 4
+		round_only_edges = false
+		gradient_round_only_edges = true
+		text_color = rgba(000000dd)
+		text_color_inactive = rgba(ffffff66)
+		col.active = rgba(97d01add)
+		col.inactive = rgba(43485988)
+		gaps_in = 0
+		gaps_out = 0
+		keep_upper_gap = false
     }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
-misc { 
-    disable_hyprland_logo = true
-    disable_splash_rendering = true
-    col.splash = rgba(ffffffff)
-    font_family = SF Pro Display
-    splash_font_family = SF Pro Display
-    force_default_wallpaper = -1
-    vfr = true # https://github.com/hyprwm/hyprland-wiki/issues/193
-    vrr = 0
-    mouse_move_enables_dpms = true
-    key_press_enables_dpms = true
-    animate_manual_resizes = false
-    animate_mouse_windowdragging = false
-    disable_autoreload = false
-    enable_swallow = false
-    swallow_regex = ^(footclient)$
-    #swallow_exception_regex = ^()$
-    mouse_move_focuses_monitor = true
-    background_color = rgba(111111ff)
-    close_special_on_empty = true
-    new_window_takes_over_fullscreen = 1
-    middle_click_paste = false
-    render_unfocused_fps = 10
+misc {
+	disable_hyprland_logo = true
+	disable_splash_rendering = true
+	col.splash = rgba(ffffffff)
+	font_family = SF Pro Display
+	splash_font_family = SF Pro Display
+	force_default_wallpaper = -1
+	vfr = true # https://github.com/hyprwm/hyprland-wiki/issues/193
+	vrr = 0
+	mouse_move_enables_dpms = true
+	key_press_enables_dpms = true
+	animate_manual_resizes = false
+	animate_mouse_windowdragging = false
+	disable_autoreload = false
+	enable_swallow = false
+	swallow_regex = ^(footclient)$
+	#swallow_exception_regex = ^()$
+	mouse_move_focuses_monitor = true
+	background_color = rgba(111111ff)
+	close_special_on_empty = true
+	new_window_takes_over_fullscreen = 1
+	middle_click_paste = false
+	render_unfocused_fps = 10
 	enable_anr_dialog = false
 	anr_missed_pings = 1
 }
@@ -281,10 +284,10 @@ misc {
 binds {
 	workspace_back_and_forth = false
 	hide_special_on_workspace_change = false
-    allow_workspace_cycles = true
-    movefocus_cycles_fullscreen = false
-    movefocus_cycles_groupfirst = true
-    window_direction_monitor_fallback = true
+	allow_workspace_cycles = true
+	movefocus_cycles_fullscreen = false
+	movefocus_cycles_groupfirst = true
+	window_direction_monitor_fallback = true
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#xwayland
@@ -298,7 +301,7 @@ xwayland {
 
 # https://wiki.hyprland.org/Configuring/Variables/#opengl
 opengl {
-    nvidia_anti_flicker = false
+	nvidia_anti_flicker = false
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#render
@@ -317,18 +320,18 @@ render {
 cursor {
 	# invisible = false
 	sync_gsettings_theme = true
-    no_hardware_cursors = 1
-    hotspot_padding = 5
-    inactive_timeout = 2
-    no_warps = false
-    persistent_warps = true
-    warp_on_change_workspace = 1
+	no_hardware_cursors = 1
+	hotspot_padding = 5
+	inactive_timeout = 2
+	no_warps = false
+	persistent_warps = true
+	warp_on_change_workspace = 1
 	warp_on_toggle_special = 0
-    default_monitor = LVDS-1
-    zoom_factor = 1.000
+	default_monitor = LVDS-1
+	zoom_factor = 1.000
 	zoom_rigid = false
-    enable_hyprcursor = false
-    hide_on_key_press = false
+	enable_hyprcursor = false
+	hide_on_key_press = false
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#ecosystem
@@ -340,18 +343,18 @@ ecosystem {
 
 # https://wiki.hyprland.org/Configuring/Dwindle-Layout/
 dwindle {
-    pseudotile = true
-    force_split = 2
-    preserve_split = true
-    use_active_for_splits = true
+	pseudotile = true
+	force_split = 2
+	preserve_split = true
+	use_active_for_splits = true
 
-    bind = $mod, P, pseudo
-    bind = $mod, C, togglesplit
+	bind = $mod, P, pseudo
+	bind = $mod, C, togglesplit
 }
 
 # https://wiki.hyprland.org/Configuring/Master-Layout/
 master {
-    new_status = master
+	new_status = master
 }
 
 ####################
@@ -412,13 +415,13 @@ submap = reset
 # Submap: Resize
 bind = $mod, R, submap, resize
 submap = resize
-    binde = , H, resizeactive, -10 0
-    binde = , J, resizeactive, 0 10
-    binde = , K, resizeactive, 0 -10
-    binde = , L, resizeactive, 10 0
-    bind = , Escape, submap, reset
-    bind = , Return, submap, reset
-    bind = CTRL, bracketleft, submap, reset
+	binde = , H, resizeactive, -10 0
+	binde = , J, resizeactive, 0 10
+	binde = , K, resizeactive, 0 -10
+	binde = , L, resizeactive, 10 0
+	bind = , Escape, submap, reset
+	bind = , Return, submap, reset
+	bind = CTRL, bracketleft, submap, reset
 submap = reset
 # keybinds further down will be global again...
 
@@ -531,12 +534,12 @@ windowrulev2 = pseudo,class:^(scrcpy)$,title:^(SM-G935F)$
 
 # smart gaps
 # https://wiki.hyprland.org/Configuring/Workspace-Rules/#smart-gaps-ignoring-special-workspaces
-#workspace = w[tv1]s[false], gapsout:0, gapsin:0
-#workspace = f[1]s[false], gapsout:0, gapsin:0
-#windowrule = bordersize 0, floating:0, onworkspace:w[tv1]s[false]
-#windowrule = rounding 0, floating:0, onworkspace:w[tv1]s[false]
-#windowrule = bordersize 0, floating:0, onworkspace:f[1]s[false]
-#windowrule = rounding 0, floating:0, onworkspace:f[1]s[false]
+# workspace = w[tv1]s[false], gapsout:0, gapsin:0
+# workspace = f[1]s[false], gapsout:0, gapsin:0
+# windowrule = bordersize 0, floating:0, onworkspace:w[tv1]s[false]
+# windowrule = rounding 0, floating:0, onworkspace:w[tv1]s[false]
+# windowrule = bordersize 0, floating:0, onworkspace:f[1]s[false]
+# windowrule = rounding 0, floating:0, onworkspace:f[1]s[false]
 
 # swayimg
 windowrule = immediate 1, class:^(swayimg.*)$
