chore(hyprland): bump to `v0.51.0`
https://github.com/hyprwm/Hyprland/pull/11420

https://github.com/hyprwm/Hyprland/pull/11058

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -141,7 +141,7 @@ decoration {
 source = conf.d/bezier.conf
 animations {
 	enabled = true
-	first_launch_animation = false
+	workspace_wraparound = false
 
 	# https://wiki.hyprland.org/Configuring/Animations/
 	animation = windowsIn, 1, 4, easeInOutExpo
@@ -209,17 +209,28 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-	workspace_swipe = false
-	workspace_swipe_fingers = 3
-	workspace_swipe_min_fingers = true
 	workspace_swipe_distance = 150
+	workspace_swipe_touch = false
+	workspace_swipe_invert = true
+	workspace_swipe_touch_invert = false
 	workspace_swipe_min_speed_to_force = 0
 	workspace_swipe_cancel_ratio = 0.0
+	workspace_swipe_create_new = false
+
+	# https://wiki.hypr.land/Configuring/Gestures/
+	# gesture = 3, horizontal, workspace
+	# gesture = 3, up, special, magic
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#group
 group {
 	auto_group = true
+	insert_after_current = true
+	focus_removed_window = true
+	drag_into_group = 2
+	merge_groups_on_drag = false
+	merge_groups_on_groupbar = false
+	merge_floated_into_tiled_on_groupbar = false
 	col.border_active = rgba(97d01add)
 	col.border_inactive = rgba(43485988)
 
@@ -239,7 +250,9 @@ group {
 		text_offset = 0
 		scrolling = false
 		rounding = 4
-		gradient_rounding = 4
+		rounding_power = 2.0
+		gradient_rounding = 10
+		gradient_rounding_power = 4.0
 		round_only_edges = false
 		gradient_round_only_edges = true
 		text_color = rgba(000000dd)
@@ -318,7 +331,7 @@ render {
 
 # https://wiki.hyprland.org/Configuring/Variables/#cursor
 cursor {
-	# invisible = false
+	invisible = false
 	sync_gsettings_theme = true
 	no_hardware_cursors = 1
 	hotspot_padding = 5
