refactor(hyprland): update config to `v0.53.1`
- Update window and layer rules to the new `windowrulev3` syntax

- Add smart gaps as if it was a plugin

- Add battery friendly configs as if it was a plugin

--- a/config/hypr/conf.d/bezier.conf
+++ b/config/hypr/conf.d/bezier.conf
@@ -37,4 +37,4 @@ bezier = easeInBack, 0.36, 0, 0.66, -0.56
 bezier = easeOutBack, 0.34, 1.56, 0.64, 1
 bezier = easeInOutBack, 0.68, -0.6, 0.32, 1.6
 
-# vim: ft=hyprlang tabstop=4 shiftwidth=4 expandtab ai
+# vim: ft=hyprlang ts=4 sts=0 sw=4 noet ai
