--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -8,21 +8,21 @@
 $mod = SUPER
 $terminal = footclient
 $floatingTerminal = $terminal -a floating-foot -e tmux new-session -A -s Scratchpad
-# $fileManager = $terminal -a Yazi --title "🗂  File Manager" bash -c "yazi"
-$fileManager = $terminal -a Yazi --title "🗂  File Manager" bash -c "env YAZI_LOG=debug yazi"
+$fileManager = $terminal -a Yazi --title "🗂  File Manager" bash -c "yazi"
+# $fileManager = $terminal -a Yazi --title "🗂  File Manager" bash -c "env YAZI_LOG=debug yazi"
 $menu = ~/.config/rofi/launcher.sh
 $bar = togglewaybar.sh
 $editor = nvim
 
 # https://wiki.hyprland.org/Configuring/Monitors/
-#monitor = name, resolution, position, scale, transform, 0
-#monitor = ,preferred,auto,auto,transform,0
-#monitor = ,preferred,auto,1,mirror, LVDS-1
+# monitor = name, resolution, position, scale, transform, 0
+# monitor = ,preferred,auto,auto,transform,0
+# monitor = ,preferred,auto,1,mirror, LVDS-1
 monitor = LVDS-1, 1366x768@60, 0x0, 1, transform, 0
-#monitor = LVDS-1, disable
-#monitor = VGA-1, 1680x1050@60, 1366x0, 1, transform, 1
+# monitor = LVDS-1, disable
+# monitor = VGA-1, 1680x1050@60, 1366x0, 1, transform, 1
 monitor = HDMI-A-1, 1680x1050@60, -1050x-912, 1, transform, 1
-#monitor = HDMI-A-1, disable
+# monitor = HDMI-A-1, disable
 
 # Plug-and-play any monitors not specified with an explicit rule
 # automatically preferred resolution and placed on the right of the other(s)
@@ -46,7 +46,9 @@ env = GDK_BACKEND,wayland,x11,*
 env = QT_QPA_PLATFORM,wayland;xcb
 env = SDL_VIDEODRIVER,wayland
 env = CLUTTER_BACKEND,wayland
+
 env = _JAVA_AWT_WM_NONREPARENTING,1
+env = _JAVA_OPTIONS,-Dawt.useSystemAAFontSettings=lcd
 
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
@@ -68,7 +70,6 @@ env = LIBVA_DRIVERS_PATH,/usr/lib/dri
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
 	border_size = 1
-	no_border_on_floating = false
 	gaps_in = 2
 	gaps_out = 4
 	gaps_workspaces = 40
@@ -262,7 +263,7 @@ group {
 		gaps_in = 0
 		gaps_out = 0
 		keep_upper_gap = false
-    }
+	}
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
@@ -284,9 +285,9 @@ misc {
 	swallow_regex = ^(footclient)$
 	#swallow_exception_regex = ^()$
 	mouse_move_focuses_monitor = true
-	background_color = rgba(111111ff)
+	background_color = rgba(000000ff)
 	close_special_on_empty = true
-	new_window_takes_over_fullscreen = 1
+	on_focus_under_fullscreen = 1
 	middle_click_paste = false
 	render_unfocused_fps = 10
 	enable_anr_dialog = false
@@ -298,7 +299,7 @@ binds {
 	workspace_back_and_forth = false
 	hide_special_on_workspace_change = false
 	allow_workspace_cycles = true
-	movefocus_cycles_fullscreen = false
+	movefocus_cycles_fullscreen = true
 	movefocus_cycles_groupfirst = true
 	window_direction_monitor_fallback = true
 }
@@ -402,12 +403,14 @@ bind = $mod, Menu, exec, kblight
 bind = $mod, Return, exec, $terminal
 bind = $mod, grave, togglespecialworkspace, magic
 bind = $mod, A, exec, $menu
-#bindr = $mod, SUPER_L, exec, $menu
 bind = $mod, B, exec, $bar
 bind = $mod, E, exec, $fileManager
 bind = $mod, N, exec, networkmanager_dmenu
-bind = $mod, S, exec, $terminal -- $editor -c ":source ~/.config/vim/simplenoterc.vim | :SimplenoteList"
-bind = $mod SHIFT, C, exec, $terminal -D ~/.dotfiles -- $editor -c ":FzfLua files"
+bind = $mod, S, exec, $terminal -- $editor -c ':source ~/.config/vim/simplenoterc.vim | :SimplenoteList'
+bind = $mod SHIFT, C, exec, $terminal -D ~/.dotfiles -- $editor -c ':lua FzfLua.files({ winopts={fullscreen=true} })'
+bind = $mod SHIFT, P, exec, $terminal -D ~/Documents/TeX/PRIMA_VERA_INTER_TERRA_EX_MACHINA -- $editor -c ':e main.tex | :badd epígrafe.tex | :badd cantos/canto1.tex | :badd cantos/canto2.tex | :FzfLua files hidden=false winopts.fullscreen=true cwd_prompt=false prompt=PVITEM/ preview="bat --theme=auto:always -p"'
+bind = SHIFT, Print, exec, grimblast save area ~/Pictures/Screenshots/$(date +%Y-%m-%d_%s).png
+bind = , Print, exec, grimblast save output ~/Pictures/Screenshots/$(date +%Y-%m-%d_%s).png
 
 # Window manager functions
 bind = $mod, Q, killactive
@@ -419,9 +422,9 @@ bind = $mod SHIFT, R, exec, hyprctl reload
 bind = $mod SHIFT, Escape, exec, hyprctl dispatcher exit
 
 # Submap: For a global unbinded environment
-bind = $mod ALT CTRL SHIFT, Return, submap, nobindings
+bind = SUPER ALT CTRL SHIFT, Return, submap, nobindings
 submap = nobindings
-bind = $mod ALT CTRL SHIFT, Return, submap, reset
+bind = SUPER ALT CTRL SHIFT, Return, submap, reset
 submap = reset
 # keybinds further down will be global again...
 
@@ -432,9 +435,14 @@ submap = resize
 	binde = , J, resizeactive, 0 10
 	binde = , K, resizeactive, 0 -10
 	binde = , L, resizeactive, 10 0
+	binde = SHIFT, H, resizeactive, -66 0
+	binde = SHIFT, J, resizeactive, 0 66
+	binde = SHIFT, K, resizeactive, 0 -66
+	binde = SHIFT, L, resizeactive, 66 0
 	bind = , Escape, submap, reset
 	bind = , Return, submap, reset
 	bind = CTRL, bracketleft, submap, reset
+	bind = CTRL, C, submap, reset
 submap = reset
 # keybinds further down will be global again...
 
@@ -484,7 +492,7 @@ bind = $mod SHIFT, grave, movetoworkspacesilent, special:magic
 # https://wiki.hyprland.org/Configuring/Workspace-Rules/#workspace-rules
 
 # Global Rules
-windowrulev2 = suppressevent maximize,class:.*
+windowrule = suppress_event maximize, match:class .*
 workspace = special:magic, on-created-empty:$floatingTerminal, border:true
 
 # Monitor Rules
@@ -502,78 +510,164 @@ workspace = 10, monitor:LVDS-1, default:true
 
 # firefoxd
 workspace = special:firefoxd, on-created-empty:firefox --new-window about:blank
-windowrule = workspace special:firefoxd,class:^(firefoxd)$
 bind = , XF86Launch2, togglespecialworkspace, firefoxd
 
 # floating-editor
-windowrule = size 675 364,class:^(floating-editor)$
-windowrule = float,class:^(floating-editor)$
-windowrule = center,class:^(floating-editor)$
+windowrule {
+	name = floating-editor
+	match:class = ^(floating-editor)$
+
+	size = 675 364
+	float = on
+	center = on
+	stay_focused = on
+}
 
 # floating-foot
-#windowrulev2 = size 677 382,class:^(floating-foot)$
-windowrulev2 = size 675 364,class:^(floating-foot)$
-windowrulev2 = float,class:^(floating-foot)$
-windowrulev2 = pseudo,class:^(floating-foot)$
-windowrulev2 = tile,class:^(floating-foot)$
-windowrulev2 = noshadow 1,class:^(floating-foot)$
-windowrulev2 = noborder 1,class:^(floating-foot)$
+windowrule {
+	name = floating-foot
+	match:class = ^(floating-foot)$
+
+	size = 675 364
+	float = on
+	pseudo = on
+	tile = on
+	no_shadow = 1
+}
+
+# java windows
+# https://www.reddit.com/r/hyprland/comments/16rwbun/comment/k2f0nco/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button
+windowrule {
+	name = NetBeans
+	match:class = ^(Apache NetBeans IDE 26)$
+	match:float = 1
+	match:fullscreen = 0
+
+	stay_focused = off
+}
+windowrule {
+	name = BurpSuite
+	match:class = ^(burp-StartBurp)$
+	match:float = 1
+	match:fullscreen = 0
+
+	stay_focused = off
+}
 
 # mpv
-windowrulev2 = noblur 1,class:^(mpv)$
-windowrulev2 = nodim 1,class:^(mpv)$
-windowrulev2 = noshadow 1,class:^(mpv)$
-windowrulev2 = opaque 1,class:^(mpv)$
-windowrulev2 = forcergbx 1,class:^(mpv)$
-windowrulev2 = immediate 1, class:^(mpv)$
-windowrulev2 = xray 0,class:^(mpv)$
+windowrule {
+	name = mpv
+	match:class = ^(mpv)$
+
+	no_blur = 1
+	no_dim = 1
+	no_shadow = 1
+	opaque = 1
+	force_rgbx = 1
+	immediate = 1
+	xray = 0
+}
 
 # pavucontrol
-windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
+windowrule {
+	name = pavucontrol
+	match:class = ^(org.pulseaudio.pavucontrol)$
+
+	size = 675 364
+	float = on
+	center = on
+}
+
+# pcmanfm (Copying files dialog)
+windowrule {
+	name = pcmanfm (Copying files dialog)
+	match:class = ^(pcmanfm)$
+	match:title = ^(Copying files)$
+
+	size = 675 264
+	float = on
+	center = on
+	stay_focused = off
+}
 
 # rofi
-layerrule = blur,rofi
-#layerrule = ignorealpha 0,rofi
-layerrule = ignorezero,rofi
-layerrule = dimaround,rofi
-layerrule = xray 1,rofi
-layerrule = animation popin,rofi
+layerrule {
+	name = rofi
+	match:namespace = rofi
+
+	blur = on
+	ignore_alpha = 0
+	dim_around = on
+	xray = 1
+	animation = popin
+}
 
 # scrcpy
-windowrulev2 = float,class:^(scrcpy)$,title:^(SM-G935F)$
-windowrulev2 = size 32% 99%,class:^(scrcpy)$,title:^(SM-G935F)$
-windowrulev2 = tile,class:^(scrcpy)$,title:^(SM-G935F)$
-windowrulev2 = pseudo,class:^(scrcpy)$,title:^(SM-G935F)$
+# windowrule {
+# 	name = scrcpy
+# 	match:class = ^(scrcpy)$
+# 	match:title = ^(SM-G935F)$
+#
+# 	size = (monitor_w*0.32) (monitor_h*0.99)
+# 	tile = on
+# 	pseudo = on
+# }
 
 # smart gaps
-# https://wiki.hyprland.org/Configuring/Workspace-Rules/#smart-gaps-ignoring-special-workspaces
-# workspace = w[tv1]s[false], gapsout:0, gapsin:0
-# workspace = f[1]s[false], gapsout:0, gapsin:0
-# windowrule = bordersize 0, floating:0, onworkspace:w[tv1]s[false]
-# windowrule = rounding 0, floating:0, onworkspace:w[tv1]s[false]
-# windowrule = bordersize 0, floating:0, onworkspace:f[1]s[false]
-# windowrule = rounding 0, floating:0, onworkspace:f[1]s[false]
+source = conf.d/smart-gaps.conf
 
 # swayimg
-windowrule = immediate 1, class:^(swayimg.*)$
+# windowrule {
+# 	name = swayimg
+# 	match:class = ^(swayimg.*)$
+#
+# 	immediate = 1
+# }
+
+# Unlock Login Keyring
+windowrule {
+	name = Unlock Login Keyring
+	match:class = ^(gcr-prompter)$
+	match:float = 1
+	match:fullscreen = 0
+
+	stay_focused = on
+}
 
 # waybar
-layerrule = blur,waybar
-layerrule = blurpopups,waybar
-layerrule = ignorezero,waybar
-layerrule = animation slide,waybar
-layerrule = xray 1,waybar
+layerrule {
+	name = waybar
+	match:namespace = waybar
+
+	blur = on
+	blur_popups = on
+	ignore_alpha = 0
+	animation = slide
+	xray = 1
+}
 
 # V4L2 Viewer
-windowrulev2 = opaque,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
-windowrulev2 = forcergbx,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
-windowrulev2 = noblur,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
-windowrulev2 = nodim,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
-windowrulev2 = noshadow,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
-windowrulev2 = xray off,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
-windowrulev2 = float,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
-# windowrulev2 = pseudo,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
-# windowrulev2 = tile,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
-windowrulev2 = pin,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
+windowrule {
+	name = V4L2 Viewer (WebCam)
+	match:class = ^(qvidcap)$
+	match:title = ^(V4L2 Viewer)$
+
+	size = 640 480
+	opaque = on
+	force_rgbx = on
+	no_blur = on
+	no_dim = on
+	no_shadow = on
+	xray = off
+
+	pseudo = on
+
+	# float = on
+	# center = on
+	# pin = on
+}
+
+# Battery friendly config patches
+# source = conf.d/battery-savings.conf
 
 # vim: ft=hyprlang ts=4 sts=0 sw=4 noet ai
