--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -240,8 +240,8 @@ group {
 		enabled = true
 		font_family = SF Pro Display
 		font_size = 14
-		font_weight_active = medium
-		font_weight_inactive = normal
+		font_weight_active = normal
+		font_weight_inactive = ultralight
 		gradients = true
 		height = 14
 		indicator_gap = 0
@@ -259,7 +259,7 @@ group {
 		text_color = rgba(000000dd)
 		text_color_inactive = rgba(ffffff66)
 		col.active = rgba(97d01add)
-		col.inactive = rgba(43485988)
+		col.inactive = rgba(43485955)
 		gaps_in = 0
 		gaps_out = 0
 		keep_upper_gap = false
