refactor(hyprland): change external monitor to the right settings

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -21,7 +21,8 @@ $editor = nvim
 monitor = LVDS-1, 1366x768@60, 0x0, 1, transform, 0
 # monitor = LVDS-1, disable
 # monitor = VGA-1, 1680x1050@60, 1366x0, 1, transform, 1
-monitor = HDMI-A-1, 1680x1050@60, -1050x-912, 1, transform, 1
+# monitor = HDMI-A-1, 1680x1050@60, -1050x-912, 1, transform, 1
+monitor = HDMI-A-1, 1680x1050@60, 1366x-912, 1, transform, 1
 # monitor = HDMI-A-1, disable
 
 # Plug-and-play any monitors not specified with an explicit rule
@@ -497,16 +498,26 @@ workspace = special:magic, on-created-empty:$floatingTerminal, border:true
 
 # Monitor Rules
 workspace = m[HDMI-A-1], gapsin:8, gapsout:16, bordersize:1
-workspace = 1, monitor:HDMI-A-1, default:true
-workspace = 2, monitor:HDMI-A-1
-workspace = 3, monitor:HDMI-A-1
-workspace = 4, monitor:HDMI-A-1
-workspace = 5, monitor:HDMI-A-1
-workspace = 6, monitor:LVDS-1
-workspace = 7, monitor:LVDS-1
-workspace = 8, monitor:LVDS-1
-workspace = 9, monitor:LVDS-1
-workspace = 10, monitor:LVDS-1, default:true
+# workspace = 1, monitor:HDMI-A-1, default:true
+# workspace = 2, monitor:HDMI-A-1
+# workspace = 3, monitor:HDMI-A-1
+# workspace = 4, monitor:HDMI-A-1
+# workspace = 5, monitor:HDMI-A-1
+# workspace = 6, monitor:LVDS-1
+# workspace = 7, monitor:LVDS-1
+# workspace = 8, monitor:LVDS-1
+# workspace = 9, monitor:LVDS-1
+# workspace = 10, monitor:LVDS-1, default:true
+workspace = 1, monitor:LVDS-1, default:true
+workspace = 2, monitor:LVDS-1
+workspace = 3, monitor:LVDS-1
+workspace = 4, monitor:LVDS-1
+workspace = 5, monitor:LVDS-1
+workspace = 6, monitor:HDMI-A-1
+workspace = 7, monitor:HDMI-A-1
+workspace = 8, monitor:HDMI-A-1
+workspace = 9, monitor:HDMI-A-1
+workspace = 10, monitor:HDMI-A-1, default:true
 
 # firefoxd
 workspace = special:firefoxd, on-created-empty:firefox --new-window about:blank
