refactor(hyprland): disable shadows in smart gaps when only one window

--- a/config/hypr/conf.d/smart-gaps.conf
+++ b/config/hypr/conf.d/smart-gaps.conf
@@ -1,8 +1,8 @@
 # ~/.config/hypr/conf.d/smart-gaps.conf
 
 # https://wiki.hypr.land/Configuring/Workspace-Rules/#smart-gaps-ignoring-special-workspaces
-workspace = w[tv1]s[false], gapsout:0, gapsin:0
-workspace = f[1]s[false],   gapsout:0, gapsin:0
+workspace = w[tv1]s[false], gapsout:0, gapsin:0, shadow:false
+workspace = f[1]s[false],   gapsout:0, gapsin:0, shadow:false
 windowrule = border_size 0, match:float 0, match:workspace w[tv1]s[false]
 windowrule = rounding 0,    match:float 0, match:workspace w[tv1]s[false]
 windowrule = border_size 0, match:float 0, match:workspace f[1]s[false]
