refactor(hyprland): rename battery friendly module file

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -679,6 +679,6 @@ windowrule {
 }
 
 # Battery friendly config patches
-# source = conf.d/battery-savings.conf
+# source = conf.d/battery-friendly.conf
 
 # vim: ft=hyprlang ts=4 sts=0 sw=4 noet ai
